--- a/public/assets/less/lend.less
+++ b/public/assets/less/lend.less
@@ -11,6 +11,9 @@
 #search {
     max-width: 300px;
 }
+form#search {
+    margin-bottom: 0;
+}
 #search .btn {
     height: 36px;
 }
